Archive2/02/66cbe8a461cbb1/output
main.cpp:6:26: error: expected namespace name
    using namespace std::string_literals;
                    ~~~~~^
main.cpp:9:34: error: invalid suffix on literal; C++11 requires a space between literal and identifier [-Wreserved-user-defined-literal]
    std::string s1 = "abc\0\0def"s; // form the string "abc\0\0def"
                                 ^
                                  
main.cpp:9:34: error: expected ';' at end of declaration
    std::string s1 = "abc\0\0def"s; // form the string "abc\0\0def"
                                 ^
                                 ;
3 errors generated.
